--- a/example/views/list/alloytouch/example/selector/index.html
+++ b/example/views/list/alloytouch/example/selector/index.html
@@ -153,7 +153,7 @@
         }
 
         .alloy-selector-line ul li {
-           
+
             height: 33px;
             font-size: 23px;
             white-space: nowrap;
@@ -304,7 +304,7 @@
             min:-100000, //不必需,滚动属性的最小值
             max: 100000,
             animationEnd: function (value) {
-                console.log(value);
+                //console.log(value);
             },
             step:33
         });
@@ -316,7 +316,7 @@
             min: -100000, //不必需,滚动属性的最小值
             max: 100000,
             animationEnd: function (value) {
-                console.log(value);
+                //console.log(value);
             },
             step: 33
         });
