update css and page

--- a/src/components/app/init.less
+++ b/src/components/app/init.less
@@ -9,28 +9,38 @@ body {
   margin: 0;
   padding: 0;
 }
-*{
+
+* {
   box-sizing: border-box;
+
 }
+
 ul, li, ol {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-input, textarea, keygen, select, button ,span,p,a{
+input, textarea, keygen, select, button, span, p, a {
   font-size: .32rem;
 }
-h1,h2,h3,h4,h5,h6{
+a,a:visited,a:active,a:link,a:hover{
+  -webkit-tap-highlight-color:transparent;
+  color:#000;
+}
+h1, h2, h3, h4, h5, h6 {
   font-size: .48rem;
 }
-h1,h2,h3,h4,h5,h6,p{
+
+h1, h2, h3, h4, h5, h6, p {
   margin: 0;
   padding: 0;
 }
+
 i {
   font-size: .40rem !important;
 }
+
 article,
 aside,
 details, /* 1 */
@@ -153,7 +163,6 @@ dfn {
  * `article` contexts in Chrome, Firefox, and Safari.
  */
 
-
 /**
  * Add the correct background and color in IE 9-.
  */
@@ -210,8 +219,6 @@ svg:not(:root) {
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
  */
-
-
 
 /**
  * Add the correct margin in IE 8.
@@ -308,7 +315,6 @@ button:-moz-focusring,
   outline: 1px dotted ButtonText;
 }
 
-
 /**
  * 1. Correct the text wrapping in Edge and IE.
  * 2. Correct the color inheritance from `fieldset` elements in IE.
@@ -353,7 +359,6 @@ textarea {
   height: auto;
 }
 
-
 /**
  * Remove the inner padding and cancel buttons in Chrome and Safari on OS X.
  */
@@ -384,10 +389,10 @@ textarea {
 
 .app-container {
   position: absolute;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   overflow: hidden;
 }
 
